[package]
name = "NEON"
version = "1.0.0"
edition = "2021"

[dependencies]
web-view = { version = "0.7.3", features = ["edge"] }
winapi = { version = "0.3", features = ["winuser", "winnt", "dwmapi", "libloaderapi", "shellapi"] }
ico = "0.4.0"
winreg = "0.55.0"
serde_json = "1.0"
win-screenshot = "4.0.13"
image = "0.25.6"
regex = "1.11.2"
arboard = "3.6.1"
surge-ping = "0.8.3"
tokio = { version = "1.21.2", features = ["full"] }

[build-dependencies]
winres = "0.1"

[[bin]]
name = "naoeonixie"
path = "main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
incremental = false
overflow-checks = false
debug-assertions = false


